html and rmd with correct date

--- a/QAR_Report.html
+++ b/QAR_Report.html
@@ -10,6 +10,7 @@
 
 <meta name="author" content="R Carroll" />
 
+<meta name="date" content="2015-07-22" />
 
 <title>Qualitative Activity Recognition</title>
 
@@ -63,7 +64,7 @@ img {
 <div id="header">
 <h1 class="title">Qualitative Activity Recognition</h1>
 <h4 class="author"><em>R Carroll</em></h4>
-<h4 class="date"><em>July 7, 2015</em></h4>
+<h4 class="date"><em>July 22, 2015</em></h4>
 </div>
 
 
